--- a/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
+++ b/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
@@ -65,6 +65,16 @@ The legacy `IncrementalTaskInputs` API has been removed. For more information, s
 
 === Potential breaking changes
 
+==== Minimal supported Kotlin Gradle Plugin version changed
+With Gradle 7.x Kotlin Gradle Plugin 1.3.72 through 1.6.21 were tested and supported.
+With Gradle 8.x minimal Kotlin Gradle Plugin tested and supported version is 1.6.10.
+It is still possible to compile to lower Kotlin language version, by modifying language version and api version setting for the Kotlin compile task.
+
+==== Minimal supported Android Gradle Plugin version changed
+With Gradle 7.x Android Gradle Plugin 4.1 through 7.3 were tested and supported.
+With Gradle 8.x minimal Android Gradle Plugin tested and supported version is 7.3 with `android.experimental.legacyTransform.forceNonIncremental=true` property.
+Android Gradle Plugin 8 and later don't require additional property to work with Gradle 8.
+
 ==== Change to `AntBuilder` parent class
 
 Previously, `org.gradle.api.AntBuilder` extended the deprecated `groovy.util.AntBuilder` class.  It now extends `groovy.ant.AntBuilder`.
