Beautify AGP property for Gradle 8 in upgrade guide

--- a/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
+++ b/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
@@ -74,7 +74,9 @@ You can use a lower Kotlin language version by modifying the language version an
 Gradle 7.x supports Android Gradle Plugin (AGP) 4.1 and above. AGP versions above 7.3 are not tested with Gradle 7.x.
 Gradle 8.x supports AGP 8 and above.
 Gradle 8.x supports AGP 7.3 and above if you configure the following property:
-`android.experimental.legacyTransform.forceNonIncremental=true`
+```
+android.experimental.legacyTransform.forceNonIncremental=true
+```
 
 ==== Change to `AntBuilder` parent class
 
