--- a/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
+++ b/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
@@ -101,6 +101,7 @@ Warnings which became errors:
 
 - An input file collection which can't be resolved.
 - Using an input with an unknown implementation. See <<validation_problems.adoc#implementation_unknown,Cannot use an input with an unknown implementation>>.
+- Missing dependencies between tasks. See <<validation_problems.html#implicit_dependency,Implicit dependencies between tasks>>.
 
 ==== Gradle does not ignore empty directories for file-trees with `@SkipWhenEmpty`
 
