Mention escalated validation warning

--- a/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
+++ b/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
@@ -101,6 +101,7 @@ Warnings which became errors:
 
 - An input file collection which can't be resolved.
 - Using an input with an unknown implementation. See <<validation_problems.adoc#implementation_unknown,Cannot use an input with an unknown implementation>>.
+- Task types without explicit cacheability annotations. See <<build_cache.html#sec:task_output_caching_details,Cacheable tasks>>.
 
 ==== Gradle does not ignore empty directories for file-trees with `@SkipWhenEmpty`
 
