--- a/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
+++ b/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
@@ -65,6 +65,13 @@ The legacy `IncrementalTaskInputs` API has been removed. For more information, s
 
 === Potential breaking changes
 
+=== Remove implicit `--add-opens` for Gradle workers
+Prior to Gradle 8.0, JDK modules `java.base/java.util` and `java.base/java.lang` were automatically opened in Gradle workers on JDK9+ by passing `--add-opens` CLI arguments. This meant any code executed in a Gradle worker was able to perform deep reflection on JDK internals without warning or failing. These implicit arguments have been removed from all workers and are no longer added by default.
+
+Gradle uses workers internally for several tasks, including the code-quality plugins (Checkstyle, CodeNarc, Pmd), ScalaDoc, AntlrTask, and the JVM compiler daemons. Further, tasks executed using process isolation via the link:worker_api.html[Worker API] are also affected. If the tool in question, any custom extensions to these tools, or plugins which utilize the worker API directly attempt to perform deep reflection into JDK internals during task execution, new warning or errors may appear.
+
+In most cases, these errors can be resolved by updating the code or dependency performing the illegal access. This may include updating code-quality tool versions, updating annotation processor versions, or updating any Gradle plugins which use the worker API. For some examples on possible error or warning outputs which may arise due to this change, see <<remove_test_add_opens>>.
+
 ==== Minimal supported Kotlin Gradle Plugin version changed
 Gradle 7.x supports Kotlin Gradle Plugin 1.3.72 and above. Kotlin Gradle Plugin versions above 1.6.21 are not tested with Gradle 7.x.
 Gradle 8.x supports Kotlin Gradle Plugin 1.6.10 and above.
@@ -319,6 +326,7 @@ It takes into account which methods are being used and which have changed, which
 Zinc version has been updated to the newest available one in order to benefit from all the recent bugfixes.
 Due to that, if you use `zincVersion` setting it's advised to remove it and only use the default version, because Gradle will only be able to compile Scala code with Zinc versions set to 1.6.x or higher.
 
+[[remove_test_add_opens]]
 ==== Removes implicit `--add-opens` for test workers
 
 Prior to Gradle 7.5, JDK modules `java.base/java.util` and `java.base/java.lang` were automatically opened in test workers on JDK9+ by passing `--add-opens` CLI arguments. This meant any tests were able to perform deep reflection on JDK internals without warning or failing. This caused tests to be unreliable by allowing code to pass when it would otherwise fail in a production environment.
